Fix Masterbar Profile subitem alignment (#92990)
* Make profile subitem background transparent

* Fix item alignment

--- a/client/layout/masterbar/style.scss
+++ b/client/layout/masterbar/style.scss
@@ -1003,7 +1003,7 @@ body.is-mobile-app-view {
 			position: relative;
 			float: left;
 			top: -35px;
-			left: 77px;
+			left: 79px;
 		}
 	}
 
